--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,10 +3,39 @@ body {
   margin: 0;
 }
 
-.container {
+.container-site {
   width: 100%;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.card {
+  background-color: rgb(123, 162, 56);
+}
+.card-title {
+  text-align: center;
+}
+.inputs-container {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+.inputs-decoration {
+  border-radius: 10px;
+  margin: 0.3rem 0 0.3rem 0;
+}
+.card-bottom {
+  padding: 0rem 0 1rem 0;
+  display: flex;
+  justify-content: center;
+}
+
+.results {
+  margin: 0rem 5rem 0 5rem;
+  font-size: 25px;
+}
+.border-form {
+  border-radius: 50%;
+  background-color: white;
 }
